tests/sumo/meso/junction_control/tls_coordination/bad/control_tlsPenalty_flowPenalty/output.sumo
Loading net-file from 'net.net.xml' ... done (1ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_23_1+0053-e32872d78b0 started with time: 0.00.
Simulation ended at time: 259.00.
Reason: All vehicles have left the simulation.
Performance:
 Duration: 0.00s
 Real time factor: 129500
 UPS: 1455500.000000
Vehicles:
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg of 30):
 RouteLength: 300.00
 Speed: 3.20
 Duration: 97.03
 WaitingTime: 0.00
 TimeLoss: 74.98
 DepartDelay: 28.57
